--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "bootstrap": "^5.3.3",
     "framer-motion": "^12.4.10",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.16.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
