--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "framer-motion": "^12.4.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-intersection-observer": "^9.16.0"
+    "react-intersection-observer": "^9.16.0",
+    "react-router-dom": "^7.3.0",
+    "react-spinners": "^0.15.0",
+    "redux-devtools-extension": "^2.13.9",
+    "sweetalert2": "^11.17.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
