--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@reduxjs/toolkit": "^2.6.1",
     "bootstrap": "^5.3.3",
     "firebase": "^11.4.0",
     "framer-motion": "^12.4.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-intersection-observer": "^9.16.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
     "react-spinners": "^0.15.0",
+    "redux": "^5.0.1",
     "redux-devtools-extension": "^2.13.9",
     "sweetalert2": "^11.17.2"
   },
