--- a/package.json
+++ b/package.json
@@ -25,12 +25,16 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-intersection-observer": "^9.16.0",
+    "react-multi-carousel": "^2.8.5",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
+    "react-slick": "^0.30.3",
     "react-spinners": "^0.15.0",
     "redux": "^5.0.1",
     "redux-devtools-extension": "^2.13.9",
+    "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.17.2",
+    "swiper": "^11.2.5",
     "yup": "^1.6.1"
   },
   "devDependencies": {
