--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@reduxjs/toolkit": "^2.6.1",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "chart.js": "^4.4.8",
     "firebase": "^11.4.0",
     "formik": "^2.4.6",
     "framer-motion": "^12.4.10",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-intersection-observer": "^9.16.0",
     "react-multi-carousel": "^2.8.5",
@@ -30,6 +32,7 @@
     "react-router-dom": "^7.3.0",
     "react-slick": "^0.30.3",
     "react-spinners": "^0.15.0",
+    "react-toastify": "^11.0.5",
     "redux": "^5.0.1",
     "redux-devtools-extension": "^2.13.9",
     "slick-carousel": "^1.8.1",
