--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "formik": "^2.4.6",
     "framer-motion": "^12.4.10",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-intersection-observer": "^9.16.0",
@@ -38,6 +39,7 @@
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.17.2",
     "swiper": "^11.2.5",
+    "uuid": "^11.1.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
