--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-bootstrap": "^2.10.9",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-multi-carousel": "^2.8.5",
     "react-qr-code": "^2.0.15",
