--- a/package.json
+++ b/package.json
@@ -16,14 +16,24 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^5.0.1",
+    "@huggingface/inference": "^2.8.1",
+    "@langchain/community": "^0.3.38",
+    "@langchain/core": "^0.3.43",
+    "@langchain/openai": "^0.5.2",
     "@paypal/react-paypal-js": "^8.8.2",
+    "@redux-devtools/extension": "^3.2.7",
     "@reduxjs/toolkit": "^2.6.1",
+    "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.8",
+    "chromadb": "^2.1.0",
+    "cors": "^2.8.5",
     "firebase": "^11.4.0",
     "formik": "^2.4.6",
-    "framer-motion": "^12.6.3",
+    "framer-motion": "^12.4.10",
+    "langchain": "^0.3.19",
+    "openai": "^4.90.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
