--- a/package.json
+++ b/package.json
@@ -15,14 +15,24 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@huggingface/inference": "^2.8.1",
+    "@langchain/community": "^0.3.38",
+    "@langchain/core": "^0.3.43",
+    "@langchain/openai": "^0.5.2",
     "@paypal/react-paypal-js": "^8.8.2",
+    "@redux-devtools/extension": "^3.2.7",
     "@reduxjs/toolkit": "^2.6.1",
+    "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.8",
+    "chromadb": "^2.1.0",
+    "cors": "^2.8.5",
     "firebase": "^11.4.0",
     "formik": "^2.4.6",
     "framer-motion": "^12.4.10",
+    "langchain": "^0.3.19",
+    "openai": "^4.90.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
@@ -38,7 +48,6 @@
     "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.5",
     "redux": "^5.0.1",
-    "redux-devtools-extension": "^2.13.9",
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.17.2",
     "swiper": "^11.2.5",
