--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@hookform/resolvers": "^5.0.1",
     "@paypal/react-paypal-js": "^8.8.2",
     "@reduxjs/toolkit": "^2.6.1",
+    "axios": "^1.9.0",
     "bootstrap": "^5.3.5",
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.8",
